# lerobot-mujoco-kinematics

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
calibration_files/: so101_follower.json  so101_leader.json
configs/: env_config.yaml
src/: __init__.py  config.py
src/hardware/: hardware_utils.py  run_real_ik.py  run_real_velocity.py  run_visual_servoing.py
src/kinematics/: __init__.py  forward.py  inverse.py  jacobian_symbolic.py  velocity.py
src/simulation/: run_sim_ik.py  run_sim_velocity.py  sim_utils.py
src/vision/: __init__.py  detector.py
